# local-whisper-stt

./: .env  .gitignore  README.md  pyproject.toml
src/local_whisper_stt/: diarization.py  environ.py  main.py  transcribe.py  utils.py
