[tool.poetry]
name = "local-whisper-stt"
version = "0.1.0"
description = ""
authors = ["Jirawat Kurakhan <porz@odds.team>"]
readme = "README.md"
packages = [{include = "local_whisper_stt", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
