[tool.poetry]
name = "local-whisper-stt"
version = "0.1.0"
description = ""
authors = ["Jirawat Kurakhan <porz@odds.team>"]
readme = "README.md"
packages = [{include = "local_whisper_stt", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9.9"
ffmpeg-python = "^0.2.0"
openai-whisper = "^20240930"
python-dotenv = "^1.0.1"
pyannote-audio = "^3.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
local-whisper-stt = 'local_whisper_stt.main:main'
